# bizsim

./: .gitignore  AGENTS.md  README.md  pyproject.toml  sim-layer-dev-plan.md
.github/workflows/: arch-guard.yml
.sisyphus/: boulder.json
.sisyphus/plans/: product-system-integration.md  v2-subsystem-refactor.md
bizsim/: __init__.py  channels.py  domain.py  engine.py  events.py  market.py  product_catalog.py  product_system.py  scheduling.yaml  social.py
bizsim/agents/: _sandbox.py  base.py  consumer.py  government.py  runner.py  seller.py  supplier.py  transport.py
bizsim/markets/: __init__.py  consumer_market.py  industrial_market.py  schema.py
bizsim/society/: __init__.py  community.py  media.py
docs/design/: agent-behavior.md  agent-behavior.v1.md  agent-sandbox.md  sim-layer-dev-plan.md  vision.md  vision.v2.md
go-translator/: go.mod  go.sum
go-translator/operations/: community.yaml  (+6 more)
specs/: AGENT_BASE.md  ARCHITECTURE.md  COMMUNITY.md  CONSUMER.md  CONTRACTS.md  EVENTS.md  GOVERNMENT.md  GO_TRANSLATOR.md  MESSAGES.md  PRODUCT_SYSTEM.md  QUERIES.md  SELLER.md  SUPPLIER.md  TRANSPORT.md
tests/: test_agents.py  test_base_injection.py  test_community.py  test_consumer.py  test_consumer_catalog.py  test_consumer_market.py  test_domain.py  test_engine.py  test_engine_injection.py  test_government.py  test_industrial_market.py  test_integration.py  test_market_schema.py  test_product_catalog.py  test_product_system.py  test_seller.py  test_seller_catalog.py  test_society_community.py  test_supplier.py  test_supplier_catalog.py  test_transport.py
(+12 files in other folders)
